# anno_robot

./: README.md
anno_autocharge/: CHARGE_README.md  CMakeLists.txt  package.xml
anno_autocharge/src/: main.cpp
anno_description/: CMakeLists.txt  package.xml
anno_description/launch/: view_model.launch
anno_description/launch/include/: robot_description.launch.xml
anno_description/rviz/: model.rviz
anno_description/urdf/agv/agv_model_v1/: index.urdf.xacro
anno_description/urdf/chargement/chargement_model_v1/: index.urdf.xacro
anno_description/urdf/charger/charger_model_v1/: index.urdf.xacro
anno_description/urdf/manipulator/manipulator_model_v1/: index.urdf.xacro
anno_gazebo/: CMakeLists.txt  package.xml
anno_gazebo/config/: controllers.yaml
anno_gazebo/launch/: anno_gazebo.launch  manipulator.launch
anno_gazebo/models/agv/agv_model_v1/: agv_model.urdf.xacro
anno_gazebo/models/charger/charger_model_v1/: charger_model.urdf.xacro
anno_gazebo/models/manipulator/manipulator_model_v1/: manipulator_model.urdf.xacro
anno_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
anno_moveit_config/config/: controller.yaml  fake_controllers.yaml  joint_limits.yaml  manipulator_model.srdf  ompl_planning.yaml
anno_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  manipulator_model_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
